--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -35,7 +35,7 @@
               </div>
               <div class="mry-fade-object mry-mb-100">
                 <h4 class="mry-mb-20 mry-fo">Welcome to visit</h4>
-                <p class="mry-text mry-mb-20 mry-fo">India, Gurugram,<br>HTGS 4456 North Av.</p>
+                <p class="mry-text mry-mb-20 mry-fo">India, Gurugram,<br>A222, Sector - 48</p>
               </div>
             </div>
 
@@ -49,7 +49,7 @@
               </div>
               <div class="mry-fade-object mry-mb-100">
                 <h4 class="mry-mb-20 mry-fo">Shall we talk?</h4>
-                <p class="mry-text mry-fo">Email: support@alkeshmahaladesigns.in <br>Phone: +91 8689 060 504</p>
+                <p class="mry-text mry-fo">Email: alkeshmahalaa@gmail.com <br>Phone: +91 9811 325 023</p>
               </div>
             </div>
 
